--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,17 @@
 cmake_minimum_required(VERSION 3.10)
-project(chip8_emulator)
+project(CHIP8Emulator)
 
 set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
+set(SOURCES 
+    src/main.cpp
+    src/chip8.cpp
+)
+
+add_executable(CHIP8 ${SOURCES})
 
 find_package(SDL2 REQUIRED)
 include_directories(${SDL2_INCLUDE_DIRS})
 
-add_executable(chip8_emulator src/main.cpp src/chip8.cpp)
-
-target_link_libraries(chip8_emulator ${SDL2_LIBRARIES})
+target_link_libraries(CHIP8 ${SDL2_LIBRARIES})
